# sort_fastq_rs

./: Cargo.toml  README.md
src/: args.rs  main.rs  sort.rs  utils.rs
