[package]
name = "sort_fastq_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
minimizer-iter = { version = "1.2.1" }
lazy_static = { version = "1.5.0" }
clap = { version = "*", features = ["derive"] }
bio = { version = "*" }
rayon = { version = "*" }
log = { version = "*" }
simple_logger = { version = "*" }
flate2 = { version = "*" }
